--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server --watch data.json"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
