--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "server": "json-server --watch data.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.9.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "json-server": "^0.17.3",
@@ -19,8 +21,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
