--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "server": "json-server --watch data.json"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.9.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "emailjs": "^4.0.3",
     "json-server": "^0.17.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
