--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-typed": "^1.2.0",
+    "recharts": "^2.8.0",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.27"
   },
