--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
