--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "emailjs": "^4.0.3",
+    "framer-motion": "^10.16.4",
     "json-server": "^0.17.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
