--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
+    "react-player": "^2.16.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-typed": "^1.2.0",
