--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-player": "^2.16.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
-    "react-typed": "^1.2.0",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.8.0",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.6.13"
